Overflow fixed

--- a/Product_Landing.css
+++ b/Product_Landing.css
@@ -2,6 +2,12 @@
     .demonstration,.course{
         flex-direction: column;
     }
+    .Features{
+        flex-direction: column;
+    }
+    nav a{
+        font-size: 20px;
+    }
 }
 body{
     background-color: gainsboro;
@@ -76,7 +82,7 @@ p{
     margin: 10px;
 }
 .imcr{
-    width: 430px;
+    width: 100%;
     height: 300px;
     border: 1px solid gray;
     border-radius: 15px;
@@ -85,6 +91,9 @@ p{
     animation-name: img;
     animation-duration: 500ms;
     animation-fill-mode: forwards;
+}
+iframe{
+    width: 100%;
 }
 @keyframes img {
     0%{
@@ -116,16 +125,21 @@ footer{
     margin: 10px;
     padding: 5px;
     background-color: gray;
-    display: flex;
-    justify-content: right;
+    width: 100vw;
 }
 .flink{
     display: flex;
-    justify-content: right;
+    justify-content: space-evenly;
+    align-items: center;
 }
-
+.last{
+    text-align: center;
+}
 .c{
     margin: 10px;
+}
+.fp{
+    width: 100%;
 }
 
 
